--- a/src/components/atoms/close/_close.scss
+++ b/src/components/atoms/close/_close.scss
@@ -15,7 +15,7 @@
     left: 45%;
     width: rem-calc(2);
     height: rem-calc(30);
-    background-color: palette("black");
+    background-color: palette("white");
     content: " ";
   }
 
