[Improved] Deprecated old logo atom

--- a/src/assets/styles/atoms.scss
+++ b/src/assets/styles/atoms.scss
@@ -5,7 +5,7 @@
 @import "../../components/atoms/bold/bold";
 @import "../../components/atoms/burger/burger";
 @import "../../components/atoms/blockquote/blockquote";
-@import "../../components/atoms/logo/logo";
+// @import "../../components/atoms/logo/logo";
 @import "../../components/atoms/chevron/chevron";
 @import "../../components/atoms/pill/pill";
 @import "../../components/atoms/headings/headings";
