[Added] Updated design colours

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -3,3 +3,16 @@
 // Font-stacks
 $font-sans: 'FFMetaWebPro', Geneva, 'Lucida Grande', Arial, sans-serif !default;
 $font-serif: 'FFMetaSerifWebPro', Georgia, 'Hoefler Text', Times, 'Times New Roman', serif!default;
+
+// Updated design colours 
+$color-crharrison: #00ade0;
+$color-azalea: #f6cdd3;
+$color-gallery: #efefef;
+$color-grey-light: #a6a6a6;
+$color-lavender: #bb7fd1;
+$color-mercury: #e7e7e7;
+$color-silver: #cccccc;
+$color-sisal: #d9d1c4;
+$color-pacific: #00b3bf;
+$color-dove-grey: #707070;
+$color-tangerine: #ffa177
