[Improved] Colour of grey meta, because a11y.

--- a/src/components/atoms/meta/_meta.scss
+++ b/src/components/atoms/meta/_meta.scss
@@ -55,14 +55,11 @@
 }
 
 .meta--grey {
-  &,
-  & > a {
-    color: tint(palette("grey"), "darken", 5);
-  }
+  color: $color-dove-grey;
 
   > a {
     @include link() {
-      color: tint(palette("grey"), "darken", 5);
+      color: $color-dove-grey;
     }
 
     @include link-hover() {
